# Proxima

./: # Plan.md  .dockerignore  .gitignore  Dockerfile  LICENSE  Plan.md  Procfile  README.md  cloud_runner_deploy.sh  cloud_runner_env.yaml  could_runner_env.yaml  proxima_ui_cloud_runner.py  pyproject.toml  requirements.txt
Proxima_Specifications/: Proxima Specifications.md
Proxima_Specifications/.obsidian/: workspace.json
Proxima_Specifications/Architecture/: High Level Architecture.md
Proxima_Specifications/CONOPS/: Scenario 1.md
Proxima_Specifications/Polygon Specs/: Polygon Specifications.md
complexity_engine/: science_growth_policy_analysis_config.yaml  time_series_analyzer.py
data_engine/: initial_db_setup.py  proxima_db_engine.py
docs/: index.html
documentation/: construction_sector.md  equipment_manufacturing_sector.md  improvements.md  science_sector.md  world_system_beta_architecture.md
documentation/analysis/: growth_policies_analysis.md
documentation/policies/: environmental_policies.md  science_policies.md
documentation/sectors/: energy_sector.md  environmental_policies.md  manufacturing_sector.md  policy_engine.md  science_sector.md  transportation_sector.md  world_system.md
documentation/test/: req_gen.py
example_mongo_db/: proxima_db.component_templates.json  proxima_db.environments.json  proxima_db.experiments.json  proxima_db.goals.json  proxima_db.world_systems.json
log_files/: lunar_microgrid_sim_001.csv
proxima_model/components/: Process.py  assembly_robot.py  energy_microgrid.py  fuel_generator.py  isru.py  local_microgrid.py  lunar_power_grid.py  playground-1.mongodb.js  power_generator.py  power_storage.py  printing_robot.py  rocket.py  sceince_rover.py  science_rover.py
proxima_model/environments/: __init__.py  lunar_env.py  world_system_beta_01.yaml
proxima_model/event_engine/: event_bus.py
proxima_model/policy_engine/: environmental_policies.py  metrics.py  policy_engine.py  policy_protocol.py  science_policies.py
proxima_model/sims/: lunar_power_sim.py  world_system_beta.py
proxima_model/sphere_engine/: construction_sector.py  energy_sector.py  equipment_manufacturing_sector.py  manufacturing_sector.py  science_sector.py  sector_factory.py  transportation_sector.py
proxima_model/tools/: data_logger.py  logger.py
proxima_model/visualizer/: ts_plot.py
proxima_model/world_system/: definitions.py  evaluation_engine.py  world_system.py  world_system_builder.py  world_system_defs.py
proxima_model/world_system_builder/: world_system.py  world_system_beta.py  world_system_builder.py
runner/: cleanup.mongodb.js  proxima_runner.py
runner/log_files/: simlog_exp_001_1765140486.086797.csv  simlog_exp_001_1765141049.932565.csv  simlog_exp_001_1765141295.081007.csv  simlog_exp_001_1765142350.78354.csv
visualizer_engine/: proxima_ui_engine.py  ui_components.py  ui_models.py
