[tool.poetry]
name = "proxima_model"
version = "0.0.1"
description = "Energy Infrastructure Simulations - Proxima"
authors = ["Arpi Derm <arpiderm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
simpy = "4.1.1"
matplotlib="3.8.2"
plotly="5.18.0"
pandas="2.2.2"

[tool.poetry.scripts]
lunar-power-grid = "proxima_model.sims.lunar_power_sim:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"